Fix logo in header on mobile screens

--- a/devmanual.css
+++ b/devmanual.css
@@ -1,3 +1,13 @@
+.logo {
+    display: inline;
+}
+
+@media only screen and (min-width: 380px) {
+    .logo {
+        display: inline-block;
+    }
+}
+
 div.header {
     border-bottom: 3px solid #333333;
     background-color: #666666;
